Prevent whitespaces select

--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,7 @@ body {
 
     span {
       color: darkgrey;
+      user-select: none;
     }
   }
 
